# MeteoService

./: .dockerignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  docker-publish.bat  main.py  plot_api_data.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
config/: config.yaml
data/: sbr.geojson
examples/: export_sbr_stationdata.py  request_sbr_stationdata.py  scrape_sf_data.py  test_driver.py  test_query_manager.py
examples/api_requests/: query_naive_default_timezone.json  query_naive_with_timezone.json  query_timezone_aware.json  query_utc.json  test_api.py
notebooks/: forecast_comparison.ipynb
src/: api.py  config.py  gapfinder.py  log_handler.py  provider_manager.py  query_manager.py  resample.py  runtime.py  utils.py  validation.py  workflow.py
src/database/: db.py  models.py
src/meteo/: SBR.py  base.py  geosphere.py  open_meteo.py  province.py
tests/: test_query_manager.py  test_query_manager_integrations.py
tests/api_requests/: README.md  query_naive_default_timezone.json  query_naive_with_timezone.json
webhandler/: SBR.py  SBR_requests.py  api.py  config.py  data.py  db.py  driver.py  provider_manager.py  query_manager.py  utils.py
webhandler/database/: db.py  models.py
webhandler/meteo/: SBR.py  base.py  province.py
